--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -63,9 +63,14 @@ body {
         text-decoration: none;
     }
     
-    ul, ol {
+    ul {
         margin-left: 10px;
         list-style-type: circle;
+    }
+
+    ol {
+        margin: 1em 0 1em 2em;
+        list-style-type: decimal;
     }
     
     h1 {
