--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -64,7 +64,7 @@ body {
     }
     
     ul {
-        margin-left: 10px;
+        margin-left: 2em;
         list-style-type: circle;
     }
 
@@ -104,7 +104,7 @@ body {
         margin: 5px 0px 10px 0px;
     }
         
-    p { margin-top: 1em;}
+    p { margin: 1em 0; }
 
     fieldset{
         border: 2px groove threedface;
