NBNV-265 fixed incorrect month formatting in download metadata, added pink download caveat and stopped div collapse on first page load

--- a/portal/src/main/sass/_nbn-colour-scheme.scss
+++ b/portal/src/main/sass/_nbn-colour-scheme.scss
@@ -9,3 +9,4 @@ $minorGrey                  : #F7F7F7;
 $minorToMediumGrey          : #F0F0F0;
 $mediumGrey                 : silver;
 $majorGrey                  : #808080;
+$caveatBackground           : #FFEEEE;
