--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -1,6 +1,7 @@
 @import "compass/reset";
 @import "compass/css3/border-radius";
 @import "compass/utilities/general/clearfix";
+@import "_caveat";
 @import "_nbn-colour-scheme";
 @import "_message";
 @import "_header";
