--- a/portal/src/main/sass/_caveat.scss
+++ b/portal/src/main/sass/_caveat.scss
@@ -3,14 +3,15 @@
 .nbn-caveat {
 
     border: 1px black solid;
-    width: 96%;
+    width: 97%;
     padding: 10px;
     background-color: $caveatBackground;
     text-align: center;
-    margin-left: auto;
+    margin-left: 5px;
     margin-right: auto;
     margin-top: 5px;
     margin-bottom: 5px;
+    display: inline-block;
     h1 {
         color: red;
         font-weight: bold;
