improving styling of report dataset table - not quite finished, but much better

--- a/portal/src/main/sass/_nbn-colour-scheme.scss
+++ b/portal/src/main/sass/_nbn-colour-scheme.scss
@@ -8,5 +8,6 @@ $veryMinorColour            : #dbf0f7;
 $minorGrey                  : #F7F7F7;
 $minorToMediumGrey          : #F0F0F0;
 $mediumGrey                 : silver;
+$mediumMajorGrey            : #DFDFDF;
 $majorGrey                  : #808080;
 $caveatBackground           : #FFEEEE;
