--- a/portal/src/main/sass/_nbn-colour-scheme.scss
+++ b/portal/src/main/sass/_nbn-colour-scheme.scss
@@ -3,6 +3,7 @@ $backgroundContentColor     : white;
 $backgroundPageColour       : #E1E9F0;
 $pageTextColour             : #999;
 $majorColour                : #007BA6;
+$mediumBlue                 : #C1D8E2;
 $minorColour                : #8696A4;
 $veryMinorColour            : #dbf0f7;
 $minorGrey                  : #F7F7F7;
