--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -174,6 +174,17 @@ body {
 
         }
     }
+
+    .tabbed-reports-dataset-table{
+        @extend .tabbed;
+        padding-left: 0px;
+        padding-right: 0px;
+        h3 {
+            margin: 0 -5px 0px;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+    }
     
     .nbn-taxon-name{
         font-style: italic; 
