--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -50,13 +50,19 @@ body {
     #nbn-page-copyright { padding: 20px 15px 30px 15px; }
 
     #nbn-page-breadcrumbs {
-        ol {list-style: none; margin: 0; }
-        li {
+        ol {
+            list-style: none; 
+            margin: 0; 
+            li { 
+                color: #65B154; 
+                &:after { content: ">"; } 
+            }
+        }
+        
+        span, li {
             margin-right: 4px;
             float: left;
             font-size: x-small;
-            color: #65B154;
-            &:after { content: ">"; }
         }
     }
     
