--- a/portal/src/main/sass/homepage.scss
+++ b/portal/src/main/sass/homepage.scss
@@ -1,10 +1,13 @@
+@import "compass";
+@import "compass/css3/box-shadow";
+
 #news-container { 
     padding:2em;
     
     a[title="RSS"] {
         text-indent:-9999px; 
         display:inline-block; 
-        background: image-url("icons/feed-icon-28x28.png") no-repeat left top; 
+        background: image-url("icons/feed-icon-28x28.png") no-repeat left center; 
         width: 35px;
     }
     
@@ -27,9 +30,7 @@
     padding: 10px;
     background: #cbcbcb;
     border: 1px solid #bbb;
-    -webkit-box-shadow: 0 0 34px #bbb;
-    -moz-box-shadow: 0 0 34px #bbb;
-    box-shadow: 0 0 34px #bbb;
+    @include single-box-shadow(#bbb, 0, 0, 34px);
 
     #slider {
 	width: 700px;			/* Set to slider width */
@@ -43,6 +44,33 @@
             width:100%;
             height:100%;
         }
+        
+        .slide { 
+            background-color:white;
+            
+            p { padding:2em; font-size: x-large; }
+
+            /*Slide specific stylings*/
+            &.welcome { @include background-image(linear-gradient(top, #E3F3DE 59%, #087A1A 100%)); }
+            &.location-search {
+                .grid-square, .site {
+                    float: left;
+                    padding: 0.5em 1.5em;
+
+                    h1 {
+                        margin-bottom: 6px;
+                        font-size: 1.5em;
+                        line-height: 28px;
+                        color: black;
+                    }
+                }
+            }
+
+            &.grid-map {
+                @include background-image(linear-gradient(top, #3C8EB4 59%,#85D1E9 100%));
+                img { padding: 0 10px; }
+            }
+        }
     }
 
     #accordion {
@@ -50,26 +78,18 @@
         height: 400px;			/* Set to image height */
         font-family: Verdana;
         background: #eee;
-        -webkit-box-shadow: -3px 0px 3px -1px rgba(51,51,51,0.3);
-        -moz-box-shadow: -3px 0px 3px -1px rgba(51,51,51,0.3);
-        box-shadow: -3px 0px 3px -1px rgba(51,51,51,0.3);
+        @include single-box-shadow(rgba(51,51,51,0.3), -3px, 0px, 3px, -1px);
         position: relative;
         z-index:999;
         overflow: hidden;
         float: left;
 
         & > .link-header {
+            @include background-image(linear-gradient(top, #ededed 59%,#dcdcdc 100%));
             padding: 8px 14px;
             font-size: 12px;
             font-weight: bold;
             color: #333;
-            background: #ededed;
-            background: -moz-linear-gradient(top, #ededed 59%, #dcdcdc 100%);
-            background: -webkit-linear-gradient(top, #ededed 59%,#dcdcdc 100%);
-            background: -o-linear-gradient(top, #ededed 59%,#dcdcdc 100%);
-            background: -ms-linear-gradient(top, #ededed 59%,#dcdcdc 100%);
-            background: linear-gradient(top, #ededed 59%,#dcdcdc 100%);
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', endColorstr='#dcdcdc',GradientType=0 );
             border-top: 1px solid #ccc;
             
             &:first-child { border-top:none; }
@@ -82,6 +102,7 @@
         }
 
         & > .link-content {
+            @include background-image(linear-gradient(top, #d6d6d6 0%,#ffffff 10%));
             height: 257px;			/* This height needs to be changed as it depends on the accordion height and number of tabs */
             font-weight: normal;
             font-size: 13px;
@@ -89,34 +110,8 @@
             margin: 0;
             padding: 16px;
             border: none;
-            background: #d6d6d6;
-            background: -moz-linear-gradient(top, #d6d6d6 0%, #ffffff 10%);
-            background: -webkit-linear-gradient(top, #d6d6d6 0%,#ffffff 10%);
-            background: -o-linear-gradient(top, #d6d6d6 0%,#ffffff 10%);
-            background: -ms-linear-gradient(top, #d6d6d6 0%,#ffffff 10%);
-            background: linear-gradient(top, #d6d6d6 0%,#ffffff 10%);
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d6d6d6', endColorstr='#ffffff',GradientType=0 );
             overflow:auto;
         }
-    }
-
-    .nav {
-        position: absolute;
-        top: 200px;
-        width: 16px;
-        height: 27px;
-        z-index: 9999;
-        background: url('../img/arrows.png') 0 0 no-repeat;
-        cursor: pointer;
-    }
-
-    .nav-left {
-        left: 30px;
-    }
-
-    .nav-right {
-        right: 310px;
-        background-position: -16px 0;
     }
 }
 
