--- a/portal/src/main/sass/homepage.scss
+++ b/portal/src/main/sass/homepage.scss
@@ -1,4 +1,5 @@
 @import "compass";
+@import "compass/utilities/color/contrast";
 @import "compass/css3/box-shadow";
 
 #news-container { 
@@ -52,9 +53,12 @@
 
             /*Slide specific stylings*/
             &.welcome { @include background-image(linear-gradient(top, #E3F3DE 59%, #087A1A 100%)); }
+            
             &.location-search {
                 .grid-square, .site {
                     float: left;
+                    position:relative;
+
                     padding: 0.5em 1.5em;
 
                     h1 {
@@ -62,6 +66,14 @@
                         font-size: 1.5em;
                         line-height: 28px;
                         color: black;
+                    }
+                    p.copyright { 
+                        @include contrasted(black);
+                        padding: 0.5em;
+                        font-size: 1em;
+                        position: absolute;
+                        bottom: 0;
+                        width: 300px; 
                     }
                 }
             }
@@ -90,7 +102,6 @@
             font-size: 12px;
             font-weight: bold;
             color: #333;
-            border-top: 1px solid #ccc;
             
             &:first-child { border-top:none; }
             &:hover { background: #ededed; cursor: pointer; }
