--- a/portal/src/main/sass/user.scss
+++ b/portal/src/main/sass/user.scss
@@ -15,3 +15,11 @@ td input:not([type=checkbox]) {
     width: 250px;
     margin-right: 20px;
 }
+
+.success {
+    color: #4F8A10;
+    background-color: #DFF2BF;
+    border: 1px solid;
+    padding: 0px 5px 0px 5px;
+    margin-bottom: 5px;
+}
