Added organisation metadata edit to the admin page, checkbox currently does not work correctly however

--- a/portal/src/main/sass/org-admin.scss
+++ b/portal/src/main/sass/org-admin.scss
@@ -4,3 +4,24 @@
     /* prevent horizontal scrollbar */
     overflow-x: hidden;
 }
+
+form input:not([type="submit"]):not([name=q]) {
+    width: 100%;
+}
+
+form textarea {
+    width: 100%;
+    height: 100px;
+}
+
+form table th {
+    width: 25%;
+}
+
+form table td {
+    width:75%;
+}
+
+form table tr {
+    width: 100%;
+}
