[NBNV-499] Editing an access request should now open up a grant dialog after it has been modified successfully, probably needs some more error handling added however.

--- a/portal/src/main/sass/accessRequest.scss
+++ b/portal/src/main/sass/accessRequest.scss
@@ -34,3 +34,12 @@
 .taxonTerm {
     font-weight: bold; 
 }
+
+#editWaitingWindow {
+    display: none !important;
+}
+
+#editWaitingWindow span {
+    float: left !important;
+    margin-top: 15px;
+}
