NBNV-591 : Added grid map legend title

--- a/portal/src/main/sass/dataset-metadata.scss
+++ b/portal/src/main/sass/dataset-metadata.scss
@@ -5,3 +5,13 @@ body{
         }
     }
 }
+
+.nbn-gridmap-div {
+    display: inline;
+}
+
+.nbn-gridmap-legend-div {
+    display: inline-block;
+    zoom: 1;
+    *display: inline;
+}
