#NBNV-767 Fixed Documentation Footer links

--- a/documentation/src/main/webapp/WEB-INF/includes/footer.jspf
+++ b/documentation/src/main/webapp/WEB-INF/includes/footer.jspf
@@ -1,2 +1,2 @@
-<div class="terms-and-conditions">By using this site you accept to be bound by the <a href="../help/popups/generalTerms.jsp">NBN Gateway terms &amp; conditions</a> and our <a href="/help/popups/privacy.jsp">cookies and privacy policy</a></div>
+<div class="terms-and-conditions">By using this site you accept to be bound by the <a href="/Terms">NBN GATEWAY TERMS &amp; CONDITIONS</a> and our <a href="/Terms/Privacy">COOKIES AND PRIVACY POLICY</a></div>
 <div class="developed-by">Developed for National Biodiversity Network by CEH and JNCC.</div>
