Work towards pre-validating filters before they go in (access request / download) moved some code together and fixed some issues; Dataset list not being populated correctly -> Spatial filter overlaps/within flag not set correctly Granting access to records with zero records affected by this Request Prevent the creation of access requests for zero-record requests

--- a/portal/src/main/sass/accessRequest.scss
+++ b/portal/src/main/sass/accessRequest.scss
@@ -17,6 +17,10 @@
     padding-top: 1em; 
 }
 
+.queryBlock-secret { 
+    padding-top: 3em; 
+}
+
 .dataset-label { 
     width: 100%; 
     display: inline-block; 
