API view page now works correctly, stll needs CSV download

--- a/portal/src/main/sass/download/downloadFilters.scss
+++ b/portal/src/main/sass/download/downloadFilters.scss
@@ -20,6 +20,11 @@
     height: 400px;
 }
 
+#nbn-information-div {
+    width:55%;
+    float:left;
+}
+
 #nbn-download-results-div {
     clear:both;
 }
