NBNV-417 - Fix to IE8 issue with temporal tip appearing in wrong place

--- a/portal/src/main/sass/dataset-metadata.scss
+++ b/portal/src/main/sass/dataset-metadata.scss
@@ -15,3 +15,9 @@ body{
     zoom: 1;
     *display: inline;
 }
+
+.nbn-chart-tooltip {
+    font-size: 0.75em;
+    color: gray;
+    margin-bottom: 25px;
+}
