--- a/importer.gui/src/main/webapp/app/css/app.css
+++ b/importer.gui/src/main/webapp/app/css/app.css
@@ -1,3 +1,5 @@
-input.ng-pristine { border:1px solid Gold; }
+/*input.ng-pristine { border:1px solid Gold; }*/
 input.ng-dirty.ng-valid { border:1px solid Green; }
 input.ng-dirty.ng-invalid { border:1px solid Red; }
+.marginTop10px{margin-top: 10px;}
+.width40{width:40%}
