Ordering the history of the importer results before returning (The order being most recent first) Adding colours and style to the importer dashboard

--- a/portal/src/main/sass/_message.scss
+++ b/portal/src/main/sass/_message.scss
@@ -1,3 +1,5 @@
+@import "_nbn-colour-scheme";
+
 .message {
     display: block;
     margin: 10px;
@@ -5,6 +7,11 @@
 
     &.error {
         border: solid 1px #C00;
-        background-color: #FCC;
+        background-color: $errorColour;
+    }
+    
+    &.info {
+        border: solid 1px $majorColour;
+        background-color: $mediumBlue;
     }
 }
