--- a/portal/src/main/sass/_nbn-colour-scheme.scss
+++ b/portal/src/main/sass/_nbn-colour-scheme.scss
@@ -12,3 +12,8 @@ $mediumGrey                 : silver;
 $mediumMajorGrey            : #DFDFDF;
 $majorGrey                  : #808080;
 $caveatBackground           : #FFEEEE;
+
+$infoColour                 : $mediumBlue;
+$successColour              : #CFC;
+$warningColour              : #FC8;
+$errorColour                : #FCC;
