--- a/portal/src/main/sass/screen.scss
+++ b/portal/src/main/sass/screen.scss
@@ -7,6 +7,7 @@
 @import "_header";
 @import "_footer";
 @import "_designation";
+@import "_importer";
 @import "_sso";
 @import "_paginator";
 @import "_datatable";
