Adding controls to import all records as sensitive/non-sensitive

--- a/portal/src/main/sass/_importer.scss
+++ b/portal/src/main/sass/_importer.scss
@@ -22,10 +22,11 @@
             i { font-style: italic; }
         }
     }
-    form {
+    .import-controls {
         position: absolute;
         top: 6px;
         right: 6px;
+        form { display: inline-block; }
     }
     .nbn-simple-table { margin-left: 2em; }
 }
