Stateing the time time the import dashboard was generated Adding add replace links as a list Adding a welcome message to the dashboard

--- a/portal/src/main/sass/_importer.scss
+++ b/portal/src/main/sass/_importer.scss
@@ -1,5 +1,6 @@
 @import "_nbn-colour-scheme";
 
+.import-page-generated { float: right; }
 .import-result {
     position: relative;
     margin-bottom: 1em;
